--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "pnpm build && NITRO_PORT=3030 node .output/server/index.mjs",
+    "start": "NITRO_PORT=3030 node .output/server/index.mjs",
     "dev": "nuxt dev -p 3000",
     "build": "nuxt build",
     "generate": "nuxt generate",
@@ -15,7 +15,7 @@
     "test:cy:e2e": "cypress run",
     "test": "pnpm run test:vitest:coverage && pnpm run test:cy:e2e",
     "test:ci": "start-server-and-test start http://localhost:3030 test",
-    "test:husky": "npx start-test http://localhost:3030"
+    "test:husky": "pnpm run build && npx start-test http://localhost:3030"
   },
   "author": "expitc",
   "license": "MIT",
